fix: filestore addressing structure
