# docs/openapi/spec.json
@@ -38,21 +38,20 @@
             "x-go-name": "Network",
             "description": "Network to use when finding addresses.",
             "name": "network",
-            "in": "query",
-            "required": true
+            "in": "query"
           },
           {
             "enum": [
               "ethereum",
-              " substrate"
+              " substrate",
+              " algorand"
             ],
             "type": "string",
             "example": "ethereum",
             "x-go-name": "Protocol",
             "description": "Protocol to use when finding addresses.",
             "name": "protocol",
-            "in": "query",
-            "required": true
+            "in": "query"
           }
         ],
         "responses": {
@@ -503,7 +502,9 @@
       "type": "object",
       "required": [
         "value",
-        "encoding"
+        "encoding",
+        "protocol",
+        "network"
       ],
       "properties": {
         "encoding": {
@@ -512,6 +513,18 @@
           "x-go-name": "Encoding",
           "example": "hex/0x-prefix"
         },
+        "network": {
+          "description": "Network `address` is available on",
+          "type": "string",
+          "x-go-name": "Network",
+          "example": "mainnet"
+        },
+        "protocol": {
+          "description": "Protocol `address` is available on",
+          "type": "string",
+          "x-go-name": "Protocol",
+          "example": "ethereum"
+        },
         "value": {
           "description": "Address value",
           "type": "string",
@@ -519,7 +532,7 @@
           "example": "0x5602ea95540bee46d03ba335eed6f49d117eab95c8ab8b71bae2cdd1e564a761"
         }
       },
-      "x-go-package": "github.com/mailchain/mailchain/cmd/mailchain/internal/http/handlers"
+      "x-go-package": "github.com/mailchain/mailchain/cmd/mailchain/http/handlers"
     },
     "GetEnvelopeResponseBodyElement": {
       "description": "GetEnvelopeResponseBodyElement response",
@@ -542,7 +555,7 @@
           "example": "0x01"
         }
       },
-      "x-go-package": "github.com/mailchain/mailchain/cmd/mailchain/internal/http/handlers"
+      "x-go-package": "github.com/mailchain/mailchain/cmd/mailchain/http/handlers"
     },
     "GetMessagesResponseHeaders": {
       "type": "object",
@@ -590,7 +603,7 @@
         }
       },
       "x-go-name": "getHeaders",
-      "x-go-package": "github.com/mailchain/mailchain/cmd/mailchain/internal/http/handlers"
+      "x-go-package": "github.com/mailchain/mailchain/cmd/mailchain/http/handlers"
     },
     "GetMessagesResponseMessage": {
       "type": "object",
@@ -655,7 +668,7 @@
         }
       },
       "x-go-name": "getMessage",
-      "x-go-package": "github.com/mailchain/mailchain/cmd/mailchain/internal/http/handlers"
+      "x-go-package": "github.com/mailchain/mailchain/cmd/mailchain/http/handlers"
     },
     "GetProtocolsProtocol": {
       "type": "object",
@@ -674,7 +687,7 @@
           "x-go-name": "Networks"
         }
       },
-      "x-go-package": "github.com/mailchain/mailchain/cmd/mailchain/internal/http/handlers"
+      "x-go-package": "github.com/mailchain/mailchain/cmd/mailchain/http/handlers"
     },
     "GetPublicKeyResponseBody": {
       "description": "GetPublicKeyResponseBody body response",
@@ -718,7 +731,7 @@
           ]
         }
       },
-      "x-go-package": "github.com/mailchain/mailchain/cmd/mailchain/internal/http/handlers"
+      "x-go-package": "github.com/mailchain/mailchain/cmd/mailchain/http/handlers"
     },
     "GetReadResponseBody": {
       "type": "object",
@@ -734,7 +747,7 @@
         }
       },
       "x-go-name": "getBody",
-      "x-go-package": "github.com/mailchain/mailchain/cmd/mailchain/internal/http/handlers"
+      "x-go-package": "github.com/mailchain/mailchain/cmd/mailchain/http/handlers"
     },
     "GetResolveAddressResponseBody": {
       "description": "GetResolveAddressResponseBody body response",
@@ -757,7 +770,7 @@
           "example": 3
         }
       },
-      "x-go-package": "github.com/mailchain/mailchain/cmd/mailchain/internal/http/handlers"
+      "x-go-package": "github.com/mailchain/mailchain/cmd/mailchain/http/handlers"
     },
     "GetResolveNameResponseBody": {
       "description": "GetResolveNameResponseBody body response",
@@ -780,7 +793,7 @@
           "example": 3
         }
       },
-      "x-go-package": "github.com/mailchain/mailchain/cmd/mailchain/internal/http/handlers"
+      "x-go-package": "github.com/mailchain/mailchain/cmd/mailchain/http/handlers"
     },
     "GetVersionResponseBody": {
       "description": "GetVersionResponseBody response",
@@ -809,7 +822,7 @@
           "example": "1.0.0"
         }
       },
-      "x-go-package": "github.com/mailchain/mailchain/cmd/mailchain/internal/http/handlers"
+      "x-go-package": "github.com/mailchain/mailchain/cmd/mailchain/http/handlers"
     },
     "Network": {
       "type": "object",
@@ -831,7 +844,7 @@
           "x-go-name": "NameServiceDomainEnabled"
         }
       },
-      "x-go-package": "github.com/mailchain/mailchain/cmd/mailchain/internal/http/handlers"
+      "x-go-package": "github.com/mailchain/mailchain/cmd/mailchain/http/handlers"
     },
     "PostMessagesResponseHeaders": {
       "description": "PostHeaders body",
@@ -859,7 +872,7 @@
         }
       },
       "x-go-name": "PostHeaders",
-      "x-go-package": "github.com/mailchain/mailchain/cmd/mailchain/internal/http/handlers"
+      "x-go-package": "github.com/mailchain/mailchain/cmd/mailchain/http/handlers"
     },
     "PostMessagesResponseMessage": {
       "description": "PostMessage body",
@@ -904,7 +917,7 @@
         }
       },
       "x-go-name": "PostMessage",
-      "x-go-package": "github.com/mailchain/mailchain/cmd/mailchain/internal/http/handlers"
+      "x-go-package": "github.com/mailchain/mailchain/cmd/mailchain/http/handlers"
     },
     "SendMessageRequestBody": {
       "description": "PostRequestBody body",
@@ -948,7 +961,7 @@
         }
       },
       "x-go-name": "PostRequestBody",
-      "x-go-package": "github.com/mailchain/mailchain/cmd/mailchain/internal/http/handlers"
+      "x-go-package": "github.com/mailchain/mailchain/cmd/mailchain/http/handlers"
     }
   },
   "responses": {
